Mise à jour des liens de connexion pour inclure le paramètre URI dans les URL

--- a/fastintern-site/src/Views/connexion/connexion.twig
+++ b/fastintern-site/src/Views/connexion/connexion.twig
@@ -15,7 +15,7 @@
             <span class="titre-logo">{{ site_name|default('FastIntern') }}</span>
         </div>
         <nav>
-            <a class="btn-retour" href="/index" {% if activePage == 'entreprises' %}class="active"{% endif %}>{{ accueil_text|default('Accueil') }}</a>
+            <a class="btn-retour" href="/?uri=index" {% if activePage == 'entreprises' %}class="active"{% endif %}>{{ accueil_text|default('Accueil') }}</a>
         </nav>
     </header>
     
