--- a/fastintern-site/src/Views/cgu.twig
+++ b/fastintern-site/src/Views/cgu.twig
@@ -12,7 +12,7 @@
     <!-- header -->
     <header>
         <div class="logo">
-            <img src="assets/fastintern_logo.png" alt="FastIntern Logo">
+            <img src="http://fastintern-static.local/static/assets/logo.png" alt="FastIntern Logo">
             <span>FastIntern</span>
         </div>
         <nav>
@@ -24,7 +24,7 @@
         </nav>
         <div class="connexion">
             <button>
-                <img src="assets/person.png" alt="person_icon" class="person_icon">
+                <img src="http://fastintern-static.local/static/assets/person.png" alt="person_icon" class="person_icon">
                 <a href="connexion.html">Mon compte</a>
             </button>
         </div>
@@ -48,7 +48,7 @@
     <!-- slogan et rectangle bleu -->
     <section class="mid-section">
         <div class="highlight">
-            <img src="assets/cloud-lightning-icon.png" alt="Mid Section Image">
+            <img src="http://fastintern-static.local/static/assets/cloud.png" alt="Mid Section Image">
             <span>Votre stage, en un éclair !</span>
         </div>
     </section>
@@ -110,21 +110,48 @@
     <!-- footer -->
     <footer>
         <div class="footer-content">
-            <div class="address">
-                <span>1 Allée du Titane 45100 Orléans</span>
-                <span>02 38 76 42 04</span>
-                <span>cesi@cesi.fr</span>
+
+            <!-- <div class="bottom-title">
+                <h1>FastIntern</h1>
+            </div> -->
+
+            <!-- Colonnes avec les liens etc -->
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h3>L'emploi</h3>
+                    <ul>
+                        <li><a href="#">Offres d'emploi par ville</a></li>
+                        <li><a href="#">Offres d'emploi par secteurs</a></li>
+                        <li><a href="#">Offres d'emploi par entreprises</a></li>
+                        <li><a href="#">Offres d'emploi par mots clés</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>L'entreprise</h3>
+                    <ul>
+                        <li><a href="#">Qui sommes-nous ?</a></li>
+                        <li><a href="#">On recrute</a></li>
+                        <li><a href="#">Accès client</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Mentions légales</h3>
+                    <ul>
+                        <li><a href="/?uri=mentions">Informations légales</a></li>
+                        <li><a href="/?uri=cgu">CGU</a></li>
+                        <li><a href="/?uri=privacy">Politique de confidentialité</a></li>
+                        <li><a href="#">Aide et contact</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="social-media">
-                <img src="assets/instagram.png" alt="Social Media Icon">
-                <img src="assets/x.png" alt="Social Media Icon">
-                <img src="assets/linkedin.png" alt="Social Media Icon">
-                <img src="assets/facebook.png" alt="Social Media Icon">
-                <img src="assets/youtube.png" alt="Social Media Icon">
-            </div>
-            <div class="legal">
-                <span>©2025 | FastIntern</span>
-                <span><a href="politique_confidentialite.html">Politique de confidentialité</a> | <a href="cgu.html">Conditions générales d'utilisation</a></span>
+
+            <!-- reseaux sociaux -->
+            <div class="footer-social">
+                <a href="#"><img src="http://fastintern.local/static/images/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="http://fastintern.local/static/images/x.png" alt="X"></a>
+                <a href="#"><img src="http://fastintern.local/static/images/linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="http://fastintern.local/static/images/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="http://fastintern.local/static/images/youtube.png" alt="YouTube"></a>
             </div>
         </div>
     </footer>
