Mise à jour des liens d'images des réseaux sociaux dans la vue CGU
css du footer fonctionnel !!!

--- a/fastintern-site/src/Views/cgu.twig
+++ b/fastintern-site/src/Views/cgu.twig
@@ -147,11 +147,11 @@
 
             <!-- reseaux sociaux -->
             <div class="footer-social">
-                <a href="#"><img src="http://fastintern.local/static/images/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="http://fastintern.local/static/images/x.png" alt="X"></a>
-                <a href="#"><img src="http://fastintern.local/static/images/linkedin.png" alt="LinkedIn"></a>
-                <a href="#"><img src="http://fastintern.local/static/images/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="http://fastintern.local/static/images/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="http://fastintern-static.local/static/assets/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="http://fastintern-static.local/static/assets/x.png" alt="X"></a>
+                <a href="#"><img src="http://fastintern-static.local/static/assets/linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="http://fastintern-static.local/static/assets/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="http://fastintern-static.local/static/assets/youtube.png" alt="YouTube"></a>
             </div>
         </div>
     </footer>
