Ajout du contrôleur PolitiqueConfidentialite et de la vue associée, mise à jour du routage pour inclure la page Politique de confidentialité, et ajout d'un footer avec des colonnes pour les liens et les icônes des réseaux sociaux.

--- a/fastintern-site/src/Views/cgu/cgu.twig
+++ b/fastintern-site/src/Views/cgu/cgu.twig
@@ -58,10 +58,10 @@
         <!-- Menu de gauche -->
         <div class="left-menu">
             <ul>
-                <li><a href="index.html">➜ Accueil</a></li>
-                <li><a href="informations_legales.html">Informations légales</a></li>
-                <li><a href="politique_confidentialite.html">Politique de confidentialité</a></li>
-                <li><a href="cgu.html">Conditions générales d'utilisation</a></li>
+                <li><a href="/?uri=index">➜ Accueil</a></li>
+                <li><a href="#">Informations légales</a></li>
+                <li><a href="/?uri=politique_confidentialite">Politique de confidentialité</a></li>
+                <li><a href="/?uri=cgu">Conditions générales d'utilisation</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
