Ajout du contrôleur InfosLegales et de la vue associée, mise à jour des liens dans les vues pour inclure la page Informations légales.

--- a/fastintern-site/src/Views/cgu/cgu.twig
+++ b/fastintern-site/src/Views/cgu/cgu.twig
@@ -59,7 +59,7 @@
         <div class="left-menu">
             <ul>
                 <li><a href="/?uri=index">➜ Accueil</a></li>
-                <li><a href="#">Informations légales</a></li>
+                <li><a href="/?uri=infos_legales">Informations légales</a></li>
                 <li><a href="/?uri=politique_confidentialite">Politique de confidentialité</a></li>
                 <li><a href="/?uri=cgu">Conditions générales d'utilisation</a></li>
                 <li><a href="#">Contact</a></li>
@@ -69,6 +69,7 @@
         <!-- Blocs avec informations légales -->
         <div class="legal_content">
             <div class="info-block">
+                <h2>Conditions Générales d'Utilisation</h2>
                 <h3>Article 1 - Définitions</h3>
 
                 L’« Utilisateur » : toute personne physique ou morale utilisant le Site. Les systèmes automatisés ou un logiciel accédant au Site sont expressément considérés comme des utilisateurs non légitimes de la base de données disponible sur le Site ou n’ayant pas licitement accès à la base de données disponible sur le Site.
