--- a/fastintern-site/src/Views/home/index.twig
+++ b/fastintern-site/src/Views/home/index.twig
@@ -90,9 +90,9 @@
                 <div class="footer-column">
                     <h3>Mentions légales</h3>
                     <ul>
-                        <li><a href="/?uri=mentions">Informations légales</a></li>
+                        <li><a href="/?uri=infos_legales">Informations légales</a></li>
                         <li><a href="/?uri=cgu">CGU</a></li>
-                        <li><a href="/?uri=privacy">Politique de confidentialité</a></li>
+                        <li><a href="/?uri=politique_confidentialite">Politique de confidentialité</a></li>
                         <li><a href="#">Aide et contact</a></li>
                     </ul>
                 </div>
