--- a/fastintern-site/src/Views/infos_legales/infos_legales.twig
+++ b/fastintern-site/src/Views/infos_legales/infos_legales.twig
@@ -69,48 +69,31 @@
         <!-- Blocs avec informations légales -->
         <div class="legal_content">
             <div class="info-block">
-                <h2>Politique de protection des données personnelles</h2>
-                La mission de FASTINTERN est d’accompagner les étudiants dans leur recherche de stages et de les mettre en relation avec des entreprises proposant des opportunités adaptées à leur profil et à leurs compétences.
-
-                <br>FASTINTERN est soucieux de la protection et de la confidentialité des données personnelles et s’engage à assurer le meilleur niveau de protection àvos données personnelles en conformité avec les règlementations en vigueur sur la protection des données personnelles, applicables en Europe (RGPD)et en France.
-
-                <br>Cette politique de confidentialité a pour objectif de vous informer sur les mesures et engagements pratiques pris par FASTINTERN afin de veiller au respect et à la protection de vos données personnelles lors de l’utilisation de nos services.
-
-                <br>Elle s’applique à l’ensemble des services (applications web, applications mobiles, services de mise en relation, solutions de ciblage pour la recommandation d’offres de stage, etc.) édités et fournis par FASTINTERN depuis les différents Sites et Applications. Elle concerne tous les visiteurs de nos Sites et les utilisateurs de nos Services (« Utilisateurs »).
-
-                <br>Les termes « nous » et « notre » se rapportent à FASTINTERN et aux Services que nous fournissons. Les termes « Vous » et « vos / votre » se rapportent à tous les Utilisateurs de nos Services ou visiteurs de nos Sites ou Applications. Le terme « Client » définit nos clients professionnels (entreprises, organisations, ou toute entité proposant des stages).
+                <h2>Informations légales</h2>
+                <p>Hellowork.com est édité par la Société HelloWork SASU</p>
+                <p>Siège social</p>
+                02 23 44 80 45
+                <br>E-mail : contact@hellowork.com
+                <br>R.C.S. RENNES 428 843 130
+                <br>TVA Intra-communautaire : FR 69 428 843 130
+                <br>Capital : 168.672 Euros
+                <br></br>
+                <p>Directeur de la Publication :</p>
+                M. Jérôme Armbruster
                 <br></br>
 
-                <h3>1 – Identité du responsable du traitement des données</h3>
-                FASTINTERN collecte et traite les données personnelles de ses Utilisateurs via ses Sites et Applications afin de vous fournir, ainsi qu’à nos Clients, nos Services. Dans la majeure partie des cas, FASTINTERN agit en tant que responsable de traitement ou co-responsable de traitement au sens du Règlement Général sur la Protection des Données (RGPD).
-                <br>
-
-                <br>Notre Délégué à la Protection des Données (DPO) est Hugo DAUGERON. 
-                <br>Il peut être contacté par mail à l’adresse hugo.daugeron@fastintern.com ou par voie postale à l’adresse suivante :
-                <br>
-                <br><strong>FASTINTERN</strong>
-                <br>SAS 1 Allée du Titane 
-                <br>Orléans, France
-
+                <p>Hébergeur</p>
+                Les sites sont hébergés par :
+                <br><br>Claranet
+                <br>24 rue du Chêne Germain
+                <br>35510 Cesson-Sévigné
+                <br>Tél. : 02 99 12 57 57
                 <br></br>
-                <h3>2 – Finalité des traitements et base juridique</h3>
-                Les traitements mis en œuvre par FASTINTERN répondent à des finalités explicites, légitimes et déterminées.
 
-                <p>Mise en relation</p>
-                
-                Nos Services vous permettent d’être mis en relation avec des entreprises proposant des stages. Nous utilisons vos données pour vous suggérer des offres de stage adaptées à votre profil et à vos compétences.
-                
-                <p>Aide à la recherche de stages</p>
-
-                Nous traitons vos données pour faciliter vos recherches de stages, gérer vos candidatures et vous informer des nouvelles opportunités. Par exemple, nous vous proposons des outils tels que les « alertes stage » pour vous notifier des offres correspondant à vos critères.
-
-                <p>Recommandations personnalisées</p>
-
-                Nous utilisons vos données pour vous recommander des offres de stage ciblées, en fonction de votre profil, de vos recherches précédentes et des stages auxquels vous avez postulé.
-
-                <p>Amélioration des services</p>
-
-                Vos données nous permettent d’améliorer nos Services et de développer de nouvelles fonctionnalités pour mieux répondre à vos besoins.
+                <p>OVH</p>
+                2 rue Kellermann
+                <br>59100 Roubaix
+                <br>Tél. : 08 99 70 17 61
                 
             </div>
         </div>
