modifications apportées sur la page des informations légales

--- a/fastintern-site/src/Views/infos_legales/infos_legales.twig
+++ b/fastintern-site/src/Views/infos_legales/infos_legales.twig
@@ -9,7 +9,7 @@
     <title>{{ page_title|default('Politique Confidentialite') }}</title>
 </head>
 <body>
-    <!-- header -->
+    <!-- En-tête du site -->
     <header>
         <div class="logo">
             <img src="http://fastintern-static.local/static/assets/logo.png" alt="FastIntern Logo">
@@ -41,11 +41,9 @@
             <a href="#">Entreprises</a>
             <a href="#">Contact</a>
         </div>
-
     </header>
 
-
-    <!-- slogan et rectangle bleu -->
+    <!-- Section avec slogan et image -->
     <section class="mid-section">
         <div class="highlight">
             <img src="http://fastintern-static.local/static/assets/cloud.png" alt="Mid Section Image">
@@ -53,9 +51,9 @@
         </div>
     </section>
 
-    <!-- Informations légales -->
+    <!-- Section informations légales -->
     <div class="legal_container">
-        <!-- Menu de gauche -->
+        <!-- Menu de navigation latéral -->
         <div class="left-menu">
             <ul>
                 <li><a href="/?uri=index">➜ Accueil</a></li>
@@ -66,48 +64,68 @@
             </ul>
         </div>
 
-        <!-- Blocs avec informations légales -->
+        <!-- Contenu principal des informations légales -->
         <div class="legal_content">
             <div class="info-block">
                 <h2>Informations légales</h2>
-                <p>Hellowork.com est édité par la Société HelloWork SASU</p>
-                <p>Siège social</p>
-                02 23 44 80 45
-                <br>E-mail : contact@hellowork.com
-                <br>R.C.S. RENNES 428 843 130
-                <br>TVA Intra-communautaire : FR 69 428 843 130
-                <br>Capital : 168.672 Euros
-                <br></br>
-                <p>Directeur de la Publication :</p>
-                M. Jérôme Armbruster
-                <br></br>
-
-                <p>Hébergeur</p>
-                Les sites sont hébergés par :
-                <br><br>Claranet
-                <br>24 rue du Chêne Germain
-                <br>35510 Cesson-Sévigné
-                <br>Tél. : 02 99 12 57 57
-                <br></br>
-
-                <p>OVH</p>
-                2 rue Kellermann
-                <br>59100 Roubaix
-                <br>Tél. : 08 99 70 17 61
                 
+                <!-- Section éditeur du site -->
+                <h3>Éditeur du site</h3>
+                <p>FastIntern.com est édité par la Société CESI</p>
+                <p>Siège social :</p>
+                <p>1 Allée du Titane<br>
+                45100 Orléans, France</p>
+                <p>Tél. : 02 38 76 42 04<br>
+                <p>Directeur de la Publication :</p>
+                <p>Mme BILOA ABANDA</p>
+                
+                <!-- Section hébergeur -->
+                <h3>Hébergeur</h3>
+                <p>Le site FastIntern est hébergé par :</p>
+                
+                <p>Microsoft Azure<br>
+                <p>Microsoft France<br>
+                37 Quai du Président Roosevelt <br>
+                92130 Issy-les-Moulineaux<br>
+                Tél. : 09 70 01 90 90</p>
+                
+                <!-- Section propriété intellectuelle -->
+                <h3>Propriété intellectuelle</h3>
+                <p>L'ensemble du contenu de ce site (textes, images, vidéos, logos, etc.) est protégé par les lois en vigueur sur la propriété intellectuelle.</p>
+                <p>Toute reproduction ou représentation, intégrale ou partielle, par quelque procédé que ce soit, sans l'autorisation expresse de FastIntern est strictement interdite et constituerait une contrefaçon sanctionnée par les articles L.335-2 et suivants du Code de la propriété intellectuelle.</p>
+                <p>Les marques et logos figurant sur ce site sont des marques déposées. Leur mention n'accorde en aucune manière une licence ou un droit d'utilisation quelconque desdites marques.</p>
+                
+                <!-- Section protection des données -->
+                <h3>Protection des données personnelles</h3>
+                <p>Conformément à la loi "Informatique et Libertés" du 6 janvier 1978 modifiée et au Règlement Général sur la Protection des Données (RGPD), vous disposez des droits suivants concernant vos données personnelles :</p>
+                <ul>
+                    <li>Droit d'accès</li>
+                    <li>Droit de rectification</li>
+                    <li>Droit à l'effacement (droit à l'oubli)</li>
+                    <li>Droit à la limitation du traitement</li>
+                    <li>Droit à la portabilité</li>
+                    <li>Droit d'opposition</li>
+                </ul>
+                <p>Pour exercer ces droits, vous pouvez nous contacter à l'adresse suivante : dpo@fastintern.com</p>
+                <p>Pour en savoir plus sur la gestion de vos données et vos droits, consultez notre <a href="/?uri=politique_confidentialite">Politique de confidentialité</a>.</p>
+                
+                <!-- Section cookies -->
+                <h3>Cookies</h3>
+                <p>Le site FastIntern utilise des cookies pour améliorer l'expérience utilisateur et proposer des services adaptés à vos besoins.</p>
+                <p>Vous pouvez configurer votre navigateur pour refuser l'installation de cookies. Cependant, certaines fonctionnalités du site pourraient ne plus être accessibles.</p>
+                <p>Pour en savoir plus sur l'utilisation des cookies, consultez notre <a href="/?uri=politique_confidentialite">Politique de confidentialité</a>.</p>
+                
+                <!-- Section crédits -->
+                <h3>Crédits</h3>
+                <p>Conception et réalisation : FastIntern Digital Team</p>
+                <p>© 2025 FastIntern - Tous droits réservés</p>
             </div>
         </div>
     </div>
 
-
-    <!-- footer -->
+    <!-- Pied de page -->
     <footer>
         <div class="footer-content">
-
-            <!-- <div class="bottom-title">
-                <h1>FastIntern</h1>
-            </div> -->
-
             <!-- Colonnes avec les liens etc -->
             <div class="footer-columns">
                 <div class="footer-column">
@@ -138,7 +156,7 @@
                 </div>
             </div>
 
-            <!-- reseaux sociaux -->
+            <!-- Réseaux sociaux -->
             <div class="footer-social">
                 <a href="#"><img src="http://fastintern-static.local/static/assets/instagram.png" alt="Instagram"></a>
                 <a href="#"><img src="http://fastintern-static.local/static/assets/x.png" alt="X"></a>
@@ -150,5 +168,5 @@
     </footer>
 
 <script src="script.js"></script>
-
+</body>
 </html>
